# pianote

./: Cargo.toml
src/: audio.rs  lib.rs  main.rs  midi.rs  piano.rs  synth.rs
src/ui/: mod.rs
