[package]
name = "pianote"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
cpal = "0.14"
midir = "0.8"
fluidlite = { version = "0.2", features = ["with-sf3", "with-stb"] }
wmidi = "4.0"
iced = { version = "0.5", optional = true }

[features]
default = ["ui"]
ui = ["dep:iced"]
